# awesome-tools

./: .gitignore  .gptgitcommitignore  CLAUDE.md  Makefile  README.md  commitmessager.gpt  go.mod  go.sum
.claude/: settings.json
.github/workflows/: main.yml
atlassian/: client.go  config.go  confluence.go  credentials.go  jira.go  jira_acli.go  jira_rest.go  resources.go  rovo.go
cli-commands/: commands-list.sh
dttm/: README.md  dttm.go  dttm_test.go
go-struct-utils/: README.md  utils.go  utils_test.go
pdf-reader/: README.md  reader.go  reader_test.go  utils.go
pdf-reader-sdk/examples/: main.go
pdf-reader/examples/: main.go
pulumi/: issue#1.md
python/: .gitignore
python/std-elastic-agent/: pyproject.toml
python/std-elastic-agent/src/std_elastic_agent/: __init__.py  agent.py  config.py
python/std-elastic-agent/tests/: test_agent.py
python/std-embeddings/: pyproject.toml
python/std-embeddings/src/std_embeddings/: __init__.py  base.py
python/std-embeddings/src/std_embeddings/providers/: __init__.py  openai.py  sentence_transformers.py  voyage.py
python/std-embeddings/tests/: test_embeddings.py
python/std-llm-client/: pyproject.toml
python/std-llm-client/tests/: test_client.py
python/std-mcp-utils/: pyproject.toml
python/std-mcp-utils/tests/: test_server.py
python/std-rag/: pyproject.toml
python/std-rag/tests/: test_rag.py
python/std-vector-store/: pyproject.toml
python/std-vector-store/src/std_vector_store/: __init__.py  base.py  document.py
python/std-vector-store/src/std_vector_store/stores/: __init__.py  chroma.py  pinecone.py
python/std-vector-store/tests/: test_store.py
rate-limiter/: Makefile  README.md  go.mod  ratelimiter.go  ratelimiter_test.go
scraper/: README.md  go.mod  go.sum  scraper.go
status-updater/: connector.go  formatter.go  github.go  jira.go  main.go  sample.env  summarize.go
(+14 files in other folders)
