[project]
name = "std-embeddings"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "voyageai>=0.2.0",
]

[project.optional-dependencies]
local = ["sentence-transformers>=2.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/std_embeddings"]
