[project]
name = "std-vector-store"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.4.0",
]

[project.optional-dependencies]
pinecone = ["pinecone-client>=3.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/std_vector_store"]
